--- a/src/assets/scss/utils/_utils.scss
+++ b/src/assets/scss/utils/_utils.scss
@@ -1,31 +1,60 @@
 .container {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 
 .mw-12 {
-    max-width: 1200px;
+  max-width: 1200px;
+}
+
+.w-100 {
+  width: 100%;
 }
 
 .d-flex {
-    display: flex;
+  display: flex;
+}
+
+.d-block {
+  display: block;
 }
 
 .flex-row {
-    flex-direction: row;
+  flex-direction: row;
+}
+
+.flex-column {
+  flex-direction: column;
 }
 
 .align-items-center {
-    align-items: center;
+  align-items: center;
+}
+
+.align-items-start {
+  align-items: flex-start;
+}
+
+.align-items-end {
+  align-items: flex-end;
+}
+
+.align-items-stretch {
+  align-items: stretch;
 }
 
 .justify-content-center {
-    justify-content: center;
+  justify-content: center;
 }
 
 .col-6 {
-    flex-basis: 50%;
+  flex-basis: 50%;
 }
 
 .col-12 {
-    flex-basis: 100%;
+  flex-basis: 100%;
+}
+
+.scroll-animate {
+  transition: transform 1s ease;
+  will-change: transform;
 }
