--- a/src/assets/scss/components/Story/_base.scss
+++ b/src/assets/scss/components/Story/_base.scss
@@ -30,4 +30,70 @@
       height: 100%;
     }
   }
+
+  .story-objective {
+    position: relative;
+    margin-top: 15rem;
+    h4 {
+      font-size: 4rem;
+      font-weight: 800;
+      width: 100%;
+      display: block;
+      text-align: center;
+    }
+    &--card {
+      height: 272px;
+      flex: 1;
+      &:first-child {
+        margin-right: 20px;
+      }
+      &:last-child {
+        margin-left: 20px;
+      }
+    }
+    &--border {
+      border-radius: 12px;
+      height: 100%;
+      background: linear-gradient(
+        60.64deg,
+        rgb(51, 143, 255) 0%,
+        rgb(211, 251, 216) 100%
+      );
+      padding: 3px;
+    }
+    &--content {
+      border-radius: 12px;
+      background-color: rgb(1, 4, 19);
+      height: 100%;
+      padding: 1rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      padding: 0 2.5rem;
+      transition: 0.3s ease;
+      h4 {
+        margin: 0;
+        font-size: 2rem;
+      }
+      p {
+        line-height: 1.5;
+        font-size: 1.25rem;
+        font-weight: 400;
+        text-align: center;
+        display: none;
+      }
+    }
+    & .story-objective--card:hover {
+      .story-objective--content {
+        background-color: transparent;
+        & p {
+          display: block;
+        }
+        & h4 {
+          display: none;
+        }
+      }
+    }
+  }
 }
