--- a/src/assets/scss/utils/_utils.scss
+++ b/src/assets/scss/utils/_utils.scss
@@ -1,9 +1,15 @@
+@import "./variables";
+
 .container {
   margin: 0 auto;
 }
 
 .mw-12 {
   max-width: 1200px;
+}
+
+.min-vh-100 {
+  min-height: 100vh;
 }
 
 .w-100 {
@@ -46,15 +52,123 @@
   justify-content: center;
 }
 
-.col-6 {
-  flex-basis: 50%;
+.justify-content-between {
+  justify-content: space-between;
 }
 
-.col-12 {
-  flex-basis: 100%;
+.justify-content-start {
+  justify-content: flex-start;
+}
+
+.justify-content-start {
+  justify-content: flex-end;
 }
 
 .scroll-animate {
-  transition: transform 1s ease;
-  will-change: transform;
+  transition: transform 0.75s ease;
 }
+
+.text-title {
+  font-size: 4rem;
+  font-weight: 800;
+  text-align: center;
+}
+
+.text-title__light {
+  font-size: 2.5rem;
+  font-weight: 600;
+  text-align: center;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-left {
+  text-align: left;
+}
+
+@each $position in $positions {
+  $prefix: "p" + $position;
+  @each $padding in $paddings {
+    $i: index(
+      $list: $paddings,
+      $value: $padding,
+    );
+    @if $position == "t" {
+      .#{$prefix}-#{$i} {
+        padding-top: $padding;
+      }
+    } @else if $position == "l" {
+      .#{$prefix}-#{$i} {
+        padding-left: $padding;
+      }
+    } @else if $position == "r" {
+      .#{$prefix}-#{$i} {
+        padding-right: $padding;
+      }
+    } @else if $position == "b" {
+      .#{$prefix}-#{$i} {
+        padding-bottom: $padding;
+      }
+    } @else if $position == "x" {
+      .#{$prefix}-#{$i} {
+        padding: 0 $padding;
+      }
+    } @else if $position == "y" {
+      .#{$prefix}-#{$i} {
+        padding: $padding 0;
+      }
+    } @else if $position == "" {
+      .#{$prefix}-#{$i} {
+        padding: $padding;
+      }
+    }
+  }
+}
+
+@each $position in $positions {
+  $prefix: "m" + $position;
+  @each $margin in $margins {
+    $i: index(
+      $list: $margins,
+      $value: $margin,
+    );
+    @if $position == "t" {
+      .#{$prefix}-#{$i} {
+        margin-top: $margin;
+      }
+    } @else if $position == "l" {
+      .#{$prefix}-#{$i} {
+        margin-left: $margin;
+      }
+    } @else if $position == "r" {
+      .#{$prefix}-#{$i} {
+        margin-right: $margin;
+      }
+    } @else if $position == "b" {
+      .#{$prefix}-#{$i} {
+        margin-bottom: $margin;
+      }
+    } @else if $position == "x" {
+      .#{$prefix}-#{$i} {
+        margin: 0 $margin;
+      }
+    } @else if $position == "y" {
+      .#{$prefix}-#{$i} {
+        margin: $margin 0;
+      }
+    } @else if $position == "" {
+      .#{$prefix}-#{$i} {
+        margin: $margin;
+      }
+    }
+  }
+}
+
+@for $i from 0 through 12 {
+  .col-#{$i} {
+    flex-basis: ($i / 12) * 100 * 1%;
+  }
+}
+
