--- a/src/assets/scss/components/Story/_base.scss
+++ b/src/assets/scss/components/Story/_base.scss
@@ -105,15 +105,16 @@
   }
 
   .target-audience {
-    min-height: 100vh;
-    padding: 200px;
+    min-height: 80vh;
     z-index: 1;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     h4 {
       text-align: center;
       font-size: 4rem;
       font-weight: 800;
-      position: relative;
       display: flex;
       flex-direction: row;
       align-items: center;
@@ -125,10 +126,11 @@
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
-      width: 600px;
-      height: 600px;
-      top: -60%;
+      width: 650px;
+      height: 650px;
       position: absolute;
+      top: 100%;
+      filter: brightness(60%);
     }
   }
 
@@ -258,13 +260,14 @@
       button {
         font-size: 20px;
         outline: none;
+        border: none;
         border-radius: 50%;
         background: none;
         color: white;
         width: 45px;
         height: 45px;
         transition: 0.3s ease;
-        margin: 0 0.5rem;
+        margin: 0 0.25rem;
         cursor: pointer;
         &:hover {
           background-color: rgba(145, 158, 171, 0.08);
