--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -3,6 +3,7 @@
 @import "./components/Story/base";
 @import "./components/Insight/base";
 @import "./components/BigIdea/base";
+@import "./components/DeploymentPlant/base";
 
 // util class
 * {
