--- a/src/assets/scss/components/BigIdea/_base.scss
+++ b/src/assets/scss/components/BigIdea/_base.scss
@@ -28,4 +28,27 @@
         top: 50px;
     }
   }
+  &__idea-two {
+    h4 {
+      font-size: 2rem;
+      font-weight: 500;
+      text-align: center;
+    }
+    img {
+      top: 0;
+    }
+  }
+  &__guide {
+    p {
+      font-weight: 400;
+      line-height: 2;
+      min-height: 100vh;
+      &:first-child {
+        margin-top: 10rem;
+      }
+    }
+    span {
+      font-weight: 800;
+    }
+  }
 }
