--- a/src/assets/scss/utils/_utils.scss
+++ b/src/assets/scss/utils/_utils.scss
@@ -64,6 +64,16 @@
   justify-content: flex-end;
 }
 
+.align-self-start {
+  align-self: flex-start;
+}
+.align-self-end {
+  align-self: flex-end;
+}
+.align-self-center {
+  align-self: center;
+}
+
 .scroll-animate {
   transition: transform 0.4s ease, top 0.6s ease;
 }
@@ -72,6 +82,12 @@
   font-size: 4rem;
   font-weight: 800;
   text-align: center;
+}
+
+.text-description {
+  line-height: 1.5;
+  font-size: 1.25rem;
+  font-weight: 400;
 }
 
 .text-title__light {
@@ -90,6 +106,18 @@
 
 .fs-14 {
   font-size: 14px;
+}
+
+.position-relative {
+  position: relative;
+}
+
+.position-absolute {
+  position: absolute;
+}
+
+.position-sticky {
+  position: sticky;
 }
 
 @each $position in $positions {
@@ -173,5 +201,39 @@
 @for $i from 0 through 12 {
   .col-#{$i} {
     flex-basis: ($i / 12) * 100 * 1%;
+  }
+}
+
+
+@each $percent in $percentages {
+  .w-#{$percent} {
+    width: $percent * 1%;
+  }
+  .h-#{$percent} {
+    height: $percent * 1%;
+  }
+  .t-#{$percent} {
+    top: $percent * 1%;
+  }
+  .r-#{$percent} {
+    right: $percent * 1%;
+  }
+  .l-#{$percent} {
+    left: $percent * 1%;
+  }
+  .b-#{$percent} {
+    bottom: $percent * 1%;
+  }
+  .t--#{$percent} {
+    top: -$percent * 1%;
+  }
+  .r--#{$percent} {
+    right: -$percent * 1%;
+  }
+  .l--#{$percent} {
+    left: -$percent * 1%;
+  }
+  .b--#{$percent} {
+    bottom: -$percent * 1%;
   }
 }
