--- a/src/assets/scss/utils/_variables.scss
+++ b/src/assets/scss/utils/_variables.scss
@@ -4,3 +4,5 @@ $margins: 0, 0.5rem, 1rem, 1.5rem, 2rem, 2.5rem, 3rem, 5rem, 7rem;
 
 // Direction variables
 $positions: "t", "b", "l", "r", "x", "y", "";
+
+$percentages: 10, 20, 30, 40, 50, 60, 70, 80, 90, 100;
